[package]
name = "Iota_Raspi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
tokio = { version = "1", features = ["full"] }
rust_gpiozero = "0.2.0"
